SIP-5366: CSS tweeks for icons like padding and alignment issues

--- a/saw-web/src/app/modules/analyze/executed-view/chart/executed-chart-view.component.scss
+++ b/saw-web/src/app/modules/analyze/executed-view/chart/executed-chart-view.component.scss
@@ -30,6 +30,7 @@ $report-height: calc(100% - #{$header-padding-bottom} - #{$header-padding-top} -
 .toggle-icons {
   text-align: right;
   font-size: 15px;
+  margin-right: 10px;
 }
 
 .mat-icon.active {
@@ -38,5 +39,6 @@ $report-height: calc(100% - #{$header-padding-bottom} - #{$header-padding-top} -
 
 .mat-icon.icon-export.report-grid-export {
   font-size: 17px;
+  margin-top: 8px;
+  margin-left: 10px;
 }
-
