--- a/saw-web/src/app/modules/observe/components/observe-chart/observe-chart.component.scss
+++ b/saw-web/src/app/modules/observe/components/observe-chart/observe-chart.component.scss
@@ -52,6 +52,8 @@ $report-height: calc(100% - #{$header-padding-bottom} - #{$header-padding-top} -
 .toggle-icons {
   text-align: right;
   font-size: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 
 .mat-icon.active {
@@ -60,4 +62,6 @@ $report-height: calc(100% - #{$header-padding-bottom} - #{$header-padding-top} -
 
 .mat-icon.icon-export.report-grid-export {
   font-size: 17px;
+  margin-top: 8px;
+  margin-left: 10px;
 }
